- Fixed bug #52732 (Docs say preg_match() returns FALSE on error, but it returns int(0))   patch by: slugonamission at gmail dot com